--- a/oficinas.html
+++ b/oficinas.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficinas</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- Link da fonte Luckiest Guy -->
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
+    <!-- Link do Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -23,6 +30,19 @@
     </header>
     </head>
 
-    <body>
+    <div class="container-fluid">
+        <div class="col-xlg-12">
+            <div class="row col-xlg-12 p-5">
+                <div class="col-md-10">
+                    <div class="oficina">oficinas</div>
+                </div>
+                <div class="col-md-2 imagem1">
+                    <img src="passatempoLogo.PNG" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
 
 </html>
