--- a/adm.html
+++ b/adm.html
@@ -5,32 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área Admin</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style_menu.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <a href="menu.html">Menu</a>
-            <a href="eventos.html">Eventos</a>
-            <a href="oficinas.html">Oficinas</a>
-            <a href="saude_bemEstar.html">Saúde e Bem estar</a>
-            <a href="contato.html">Contato</a>
-            <a href="adm.html">Área Admin</a>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <a href="menu.html">Menu</a>
+        <a href="eventos.html">Eventos</a>
+        <a href="oficinas.html">Oficinas</a>
+        <a href="saude_bemEstar.html">Saúde e Bem estar</a>
+        <a href="contato.html">Contato</a>
+        <a href="adm.html">Área Admin</a>
+    </nav>
     <article>
         <form>
             <div>
                 <label class="form-label" for="login">Login</label>
                 <input class="form-control" id="login" type="text">
-            </div>
-            <br>
-            <div>
-                <label for="email_login" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email_login" placeholder="name@example.com">
             </div>
             <br>
             <div>
