--- a/oficinas.html
+++ b/oficinas.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style_oficina.css">
 
 </head>
 
@@ -21,8 +21,8 @@
     <header class="header">
         <nav class="navbar">
             <a href="menu.html">Menu</a>
-            <a href="eventos.html">Eventos</a>
             <a href="oficinas.html">Oficinas</a>
+            <a href="eventos.html">Eventos</a>
             <a href="saude_bemEstar.html">Saúde e Bem estar</a>
             <a href="contato.html">Contato</a>
             <a href="adm.html">Área Admin</a>
@@ -30,19 +30,36 @@
     </header>
     </head>
 
-    <div class="container-fluid">
+    <div class="container-fluid p-0">
         <div class="col-xlg-12">
-            <div class="row col-xlg-12 p-5">
-                <div class="col-md-10">
-                    <div class="oficina">oficinas</div>
+            <div class="row col-xlg-12 d-flex justify-content-center p-5">
+                <div class="col-md-4 p-0" id="imagem1">
+                    <img src="Image/passatempoLogo.PNG" alt="">
                 </div>
-                <div class="col-md-2 imagem1">
-                    <img src="passatempoLogo.PNG" alt="">
+                <div class="col-md-2 p-0">
+                    <div class="oficina">oficinas</div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="container-fluid p-0">
+        <div class="col-xlg-12 p-0" id="container_azulEscuro">
+            <div class="row col-xlg-12 d-flex justify-content-between">
+                    <div class="col-md-4 p-1 m-5" >
+                        <p>Com uma variedade de materiais coloridos e ferramentas divertidas, 
+                        nossas oficinas proporcionam um ambiente
+                        estimulante e acolhedor para que as crianças possam se expressar livremente. Valorizamos a diversidade de ideias
+                        e incentivamos a experimentação, sempre celebrando a singularidade de cada pequeno artista.
+                        Aqui, o aprendizado acontece de forma lúdica e significativa, promovendo o desenvolvimento 
+                        criativo e emocional de forma encantadora.   
+                        </p>
+                    </div>
+                    <div class="col-md-4 p-10 m-5" id="imagem2">
+                        coloque imagem
+                    </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
