--- a/adm.html
+++ b/adm.html
@@ -19,22 +19,54 @@
         <a href="contato.html">Contato</a>
         <a href="adm.html">Área Admin</a>
     </nav>
+
+
     <article>
-        <form>
-            <div>
-                <label class="form-label" for="login">Login</label>
-                <input class="form-control" id="login" type="text">
-            </div>
-            <br>
-            <div>
-                <label class="form-label" for="senha_login" >Senha</label>
-                <input class="form-control" id="senha_login" type="password">
-            </div>
-            <br>
-            <div>
-                <button type="button" class="btn" style="background-color: aquamarine;">Login</button>  
-            </div>
-        </form>
+        <div class="container-fluid border border-primary">
+            <form>
+                <div class="row border border-danger">
+                    <label class="form-label" for="login">Login</label>
+                    <input class="form-control" id="login" type="text">
+                </div>
+                <br>
+                <div class="row border border-danger">
+                    <label class="form-label" for="senha_login" >Senha</label>
+                    <input class="form-control" id="senha_login" type="password">
+                </div>
+                <br>
+                <div class="row justify-content-center border border-danger">
+                    <div class="col-1 text-center border border-danger">
+                        <button type="submit" class="btn btn-primary ">Login</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </article>
+    <br>
+    <article>
+        <div class="container-fluid ">
+            <form>
+                <div class="row justify-content-center">
+                    <div class="col-2">
+                        <label class="form-label" for="login">Login</label>
+                        <input class="form-control" id="login" type="text">
+                    </div>
+                </div>
+                <br>
+                <div class="row justify-content-center">
+                    <div class="col-2">
+                        <label class="form-label" for="senha_login" >Senha</label>
+                        <input class="form-control" id="senha_login" type="password">
+                    </div>
+                </div>
+                <br>
+                <div class="row justify-content-center ">
+                    <div class="col-1 text-center ">
+                        <button type="submit" class="btn btn-primary ">Login</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </article>
 
     <body>
