--- a/adm.html
+++ b/adm.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área Admin</title>
-    <link rel="stylesheet" href="CSS/style_menu.css">
+    <link rel="stylesheet" href="CSS/style_adm.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     </nav>
 
 
-    <article>
+    <!-- <article>
         <div class="container-fluid border border-primary">
             <form>
                 <div class="row border border-danger">
@@ -42,19 +43,19 @@
             </form>
         </div>
     </article>
-    <br>
+    <br> -->
     <article>
         <div class="container-fluid ">
             <form>
                 <div class="row justify-content-center">
-                    <div class="col-2">
+                    <div class="col">
                         <label class="form-label" for="login">Login</label>
                         <input class="form-control" id="login" type="text">
                     </div>
                 </div>
                 <br>
                 <div class="row justify-content-center">
-                    <div class="col-2">
+                    <div class="col">
                         <label class="form-label" for="senha_login" >Senha</label>
                         <input class="form-control" id="senha_login" type="password">
                     </div>
@@ -68,6 +69,8 @@
             </form>
         </div>
     </article>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <body>
 
