Implementação do DB para busca de elementos de texto.

--- a/prototipos/front/index.html
+++ b/prototipos/front/index.html
@@ -16,9 +16,8 @@
             <div class="col-4">
                 <div class="form-floating mb-5">
                     <!-- Essa é a forma que o texto deve tomar na hora de ser lido apenas -->
-                    <p style="text-indent: 1em;" id="texto0">
-                        
-                    </p>
+                    <p style="text-indent: 1em;" id="texto0"></p>
+                    <p style="text-indent: 1em;" id="texto1"></p>
                     
                     <!-- Esse é a forma que o texto deve tomar na hora de ser editado. -->
                     <!-- <textarea class="form-control" name="test" id="textoPreenchido" style="height: 300px;"></textarea>
