--- a/prototipos/front/index.html
+++ b/prototipos/front/index.html
@@ -25,10 +25,14 @@
                 </div>
             </div>
 
+            <div class="col-4">
+                <img style="width: 70%" id="img0">
+                <img style="width: 70%" id="img1">
+            </div>
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-4">
+            <div class="col-4 mt-5">
                 <button class="btn btn-outline-primary w-100" data-bs-toggle="button" onclick="trocarModoAdmin()">Modo Admin</button>
             </div>
         </div>
