Criado a pagina bem estar
Arrumei o diretório da pagina bem estar nas outras que estava errado, tentei adicionar imagens, não deu certo e possível mudanças.

--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
             <a href="menu.html">Menu</a>
             <a href="oficinas.html">Oficinas</a>
             <a href="eventos.html">Eventos</a>
-            <a href="saude_bemEstar.html">Saúde e Bem estar</a>
+            <a href="saudeBemEstar.html">Saúde e Bem estar</a>
             <a href="contato.html">Contato</a>
             <a href="adm.html">Área Admin</a>
         </nav>
