--- a/saudeBemEstar.html
+++ b/saudeBemEstar.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style_bem_estar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,13 +19,69 @@
             <a href="menu.html">Menu</a>
             <a href="eventos.html">Eventos</a>
             <a href="oficinas.html">Oficinas</a>
-            <a href="saude_bemEstar.html">Saúde e Bem estar</a>
+            <a href="saudeBemEstar.html">Saúde e Bem estar</a>
             <a href="contato.html">Contato</a>
             <a href="adm.html">Área Admin</a>
         </nav>
     </header>
-    </head>
+    <div class="container-fluid p-0" id="principal">
+        <div class="col-xlg-12">
+            <div class="row col-xlg-12 d-flex justify-content-center p-5">
+                <div class="col-md-4 p-0" id="imagemLogo">
+                    <img src="Image/passatempoLogo.PNG" alt="">
+                </div>
+                <div class="col-md-4 p-0">
+                    <div class="saude">Saúde e bem estar</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xlg-12 p-0 justify-content-center align-items-center d-flex">
+            <div class="col-lg-10 align-self-center" id="texto1">
+                Sabemos a importância do cuidado com a saúde e o bem-estar através da prática de atividades físicas,
+                oferecendo diferentes modalidades e serviços que promovem um estilo de vida saudável
+            </div>
+        </div>
+        <div class="row col-xlg-8 m-5 d-flex justify-content-between p-5">
+            <div class="col-md-5 p-0 d-flex justify-content-center align-items-center" id="card1">
+                <div class="card m-5" style="width: 18rem;" id="cardBorda1">
+                    <img src="Image/coloque_imagem.PNG" class="card-img-top" alt="...">
+                    <div class="card-body1">
+                        <h5 class="card-titulo">Clínica Esportiva</h5>
+                        <p class="card-text">Nossas Clínicas Esportivas são projetadas para introduzir crianças ao
+                            mundo dos esportes de maneira divertida, segura e educativa.
 
-    <body>
+                            Com foco no desenvolvimento físico, social e emocional, oferecemos uma ampla gama de
+                            modalidades esportivas que estimulam o espírito de equipe, a disciplina, e o gosto pela
+                            atividade física desde cedo.
+
+                            As atividades são conduzidas por profissionais qualificados e utilizam métodos lúdicos para
+                            ensinar os fundamentos de diferentes esportes.
+                            Futebol, Basquete, Vôlei, Ginástica, Circo, Capoeira, Handebol, Takkyu Volley, Esgrima,
+                            Pilates, Funcional Kids e muito mais
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 p-0 d-flex justify-content-center align-items-center" id="card2">
+                <div class="card m-5" style="width: 18rem;" id="cardBorda2">
+                    <img src="Image/coloque_imagem.PNG" class="card-img-top" alt="...">
+                    <div class="card-body2">
+                        <h5 class="card-titulo ">Estação Fitness</h5>
+                        <p class="card-text">A Estação Fitness é um espaço completo para todas as idades, dedicado ao
+                            exercício físico e ao bem-estar.
+
+                            Aqui, oferecemos uma variedade de atividades para quem busca melhorar a saúde, a condição
+                            física e o bem-estar geral. Nossas sessões incluem treinos personalizados, aulas em grupo e
+                            programas de condicionamento físico que atendem às necessidades de iniciantes a atletas
+                            avançados.
+
+                            Yoga, Pilates, Zumba, Funcional, Crossfit e muito mais.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <body>
 
 </html>
