--- a/eventos.html
+++ b/eventos.html
@@ -4,20 +4,169 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventos</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style_eventos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- fonte luck -->
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header class="header">
-        <nav class="navbar">
-            <a href="menu.html">Menu</a>
-            <a href="eventos.html">Eventos</a>
-            <a href="oficinas.html">Oficinas</a>
-            <a href="saudeBemEstar.html">Saúde e Bem estar</a>
-            <a href="contato.html">Contato</a>
-            <a href="adm.html">Área Admin</a>
+    <header>
+        <nav>
+
         </nav>
     </header>
+
+
+    <article>
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+
+            <!-- tab social -->
+            <li class="nav-item" role="presentation">
+                <!-- botao eventos sociais -->
+              <button class="nav-link active" id="pills-eventos_sociais-tab" data-bs-toggle="pill" data-bs-target="#pills-eventos_sociais" type="button" role="tab" aria-controls="pills-eventos_sociais" aria-selected="true">Eventos Sociais</button>
+            </li>
+
+            <!-- tab corp -->
+            <li class="nav-item" role="presentation">
+                <!-- botao eventos corporativos -->
+              <button class="nav-link" id="pills-eventos_corporativos-tab" data-bs-toggle="pill" data-bs-target="#pills-eventos_corporativos" type="button" role="tab" aria-controls="pills-eventos_corporativos" aria-selected="false">Eventos Corporativos</button>
+            </li>
+          </ul>
+
+          <br>
+
+          <!-- conteudos das tabs -->
+          <div class="tab-content" id="pills-tabContent">
+
+            <!-- eventos sociais info-->
+            <div class="tab-pane fade show active" id="pills-eventos_sociais" role="tabpanel" aria-labelledby="pills-eventos_sociais-tab" tabindex="0">
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5  text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+            </div>
+
+            <!--esventos corporativos info-->
+            <div class="tab-pane fade" id="pills-eventos_corporativos" role="tabpanel" aria-labelledby="pills-eventos_corporativos-tab" tabindex="0">
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+
+                <br>
+                <div class="row justify-content-between">
+                    <div class="col-sm-12 col-md-6 texto">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                    </div>
+                    <div class="col-sm-12 col-md-5 text-center imagem">
+                        <img src="Image/passatempoLogo.PNG">
+                    </div>
+                </div>
+            </div>
+          </div>
+    </article>
+
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
