--- a/eventos.html
+++ b/eventos.html
@@ -72,7 +72,7 @@
             </div>
 
             <!--esventos corporativos info-->
-            <div class="tab-pane fade" id="pills-eventos_corporativos" role="tabpanel" aria-labelledby="pills-eventos_corporativos-tab" tabindex="0">
+            <div class="tab-pane fade eventos" id="pills-eventos_corporativos" role="tabpanel" aria-labelledby="pills-eventos_corporativos-tab" tabindex="0">
                 <div class="row justify-content-between">
                     <div class="col-sm-12 col-md-6 texto">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
