--- a/prototipos/front/index.html
+++ b/prototipos/front/index.html
@@ -34,6 +34,7 @@
         <div class="row justify-content-center">
             <div class="col-4 mt-5">
                 <button class="btn btn-outline-primary w-100" data-bs-toggle="button" onclick="trocarModoAdmin()">Modo Admin</button>
+                <button class="btn btn-outline-success w-100 d-none" id="botaoCadastro" onclick="cadastrarTextos()">Salvar Mudanças</button>
             </div>
         </div>
     </div>
