--- a/adm.html
+++ b/adm.html
@@ -12,16 +12,8 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="menu.html">Menu</a>
-        <a href="eventos.html">Eventos</a>
-        <a href="oficinas.html">Oficinas</a>
-        <a href="saudeBemEstar.html">Saúde e Bem estar</a>
-        <a href="contato.html">Contato</a>
-        <a href="adm.html">Área Admin</a>
-    </nav>
 
-
+    
     <!-- <article>
         <div class="container-fluid border border-primary">
             <form>
@@ -45,24 +37,24 @@
     </article>
     <br> -->
     <article>
-        <div class="container-fluid ">
+        <div class="container-fluid">
             <form>
                 <div class="row justify-content-center">
-                    <div class="col">
+                    <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3 ">
                         <label class="form-label" for="login">Login</label>
                         <input class="form-control" id="login" type="text">
                     </div>
                 </div>
                 <br>
                 <div class="row justify-content-center">
-                    <div class="col">
+                    <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3 ">
                         <label class="form-label" for="senha_login" >Senha</label>
                         <input class="form-control" id="senha_login" type="password">
                     </div>
                 </div>
                 <br>
                 <div class="row justify-content-center ">
-                    <div class="col-1 text-center ">
+                    <div class="col-1 text-center">
                         <button type="submit" class="btn btn-primary ">Login</button>
                     </div>
                 </div>
