Atualização menu.html

--- a/menu.html
+++ b/menu.html
@@ -122,18 +122,20 @@
                 aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem0">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em"
                         id="01">Primeira foto</text>
                 </svg>
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 id="02">Título da descrição</h5>
+                    <h5 id="02">Oficinas</h5>
                     <p id="03">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia est animi totam optio
                         omnis
                         laborum perferendis iste quibusdam dolores laboriosam sapiente, voluptate nemo aut earum,
@@ -143,13 +145,13 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem1">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em"
                         id="04">Segunda foto</text>
                 </svg>
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 id="05">Titulo da descrição</h5>
+                    <h5 id="05">Eventos Sociais</h5>
                     <p id="06">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas reprehenderit nulla eos
                         saepe
                         consectetur non porro, facilis dolores laboriosam alias veritatis qui maiores ipsam eum corrupti
@@ -159,14 +161,30 @@
             <div class="carousel-item">
                 <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                    preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem2">
                     <title>Placeholder</title>
                     <rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em"
                         id="07">Terceira foto</text>
                 </svg>
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 id="08">Título da descrição</h5>
+                    <h5 id="08">Eventos Corporativos</h5>
                     <p id="09">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit libero, non minus
+                        voluptates
+                        molestiae quaerat illum necessitatibus vitae deleniti, sunt qui perspiciatis corrupti nihil vero
+                        nulla reprehenderit dolore consectetur ut!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
+                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide"
+                    preserveAspectRatio="xMidYMid slice" focusable="false" id="imagem3">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#555"></rect><text x="50%" y="50%" fill="#333" dy=".3em"
+                        id="10">Quarta foto</text>
+                </svg>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 id="11">Saúde e Bem-Estar</h5>
+                    <p id="12">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit libero, non minus
                         voluptates
                         molestiae quaerat illum necessitatibus vitae deleniti, sunt qui perspiciatis corrupti nihil vero
                         nulla reprehenderit dolore consectetur ut!</p>
