Spinner adicionado ao botão salvar mudanças

--- a/prototipos/front/index.html
+++ b/prototipos/front/index.html
@@ -11,23 +11,24 @@
 
 <body onload="obterTexto()">
     <div class="container-fluid mt-5">
-        <div class="row justify-content-center">
-
+        <div class="row justify-content-center" id="linha0">
             <div class="col-4">
                 <div class="form-floating mb-5">
                     <!-- Essa é a forma que o texto deve tomar na hora de ser lido apenas -->
                     <p style="text-indent: 1em;" id="texto0"></p>
-                    <p style="text-indent: 1em;" id="texto1"></p>
                     
                     <!-- Esse é a forma que o texto deve tomar na hora de ser editado. -->
                     <!-- <textarea class="form-control" name="test" id="textoPreenchido" style="height: 300px;"></textarea>
                     <label for="textoPreenchido">Defina o texto a ser exibido</label> -->
                 </div>
             </div>
+        </div>
 
+        <div class="row justify-content-center" id="linha1">
             <div class="col-4">
-                <img style="width: 70%" id="img0">
-                <img style="width: 70%" id="img1">
+                <div class="form-floating mb-5">
+                    <p style="text-indent: 1em;" id="texto1"></p>
+                </div>
             </div>
         </div>
 
