nav  no ctt e na ofc

--- a/oficinas.html
+++ b/oficinas.html
@@ -22,8 +22,8 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md fixed-top ">
-          <div class="container-fluid  ">
+        <nav class="navbar navbar-expand-md fixed ">
+          <div class="container-fluid">
             <div>
               <img src="Image/Logo Passatempo.png" class="home_logo ">
             </div>
