--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md fixed-top border border-danger">
+    <nav class="navbar navbar-expand-md fixed">
       <div class="container-fluid">
         <div>
           <img src="Image/Logo Passatempo.png" class="home_logo ">
