--- a/menu-2.html
+++ b/menu-2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="CSS/teste.css">
+    <link rel="stylesheet" href="CSS/teste_menu.css">
     <link rel="stylesheet" href="CSS/style_navbar.css">
     <link rel="stylesheet" href="CSS/style_footer.css">
 
