arrumando html e css pt2

--- a/navbar.html
+++ b/navbar.html
@@ -31,10 +31,10 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-around flex-grow-1">
               <li class="nav-item text-top ">
-                <a class="nav-link " aria-current="page" href="menu.html">Home</a>
+                <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="oficinas.html">Oficinas</a>
+                <a class="nav-link" href="oficinas-2.html">Oficinas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="eventos.html">Eventos Sociais</a>
