arrumando htmle css pt3

--- a/eventos.html
+++ b/eventos.html
@@ -82,7 +82,7 @@
     <br>
 
     <article>
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills mb-3 border border-danger " id="pills-tab" role="tablist">
 
             <!-- tab social -->
             <li class="nav-item" role="presentation">
@@ -104,29 +104,29 @@
 
             <!-- eventos sociais info-->
             <div class="tab-pane fade show active" id="pills-eventos_sociais" role="tabpanel" aria-labelledby="pills-eventos_sociais-tab" tabindex="0">
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
+                <div class="row justify-content-around">
+                    <div class="col-sm-12 col-md-7 texto">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
                     </div>
-                    <div class="col-sm-12 col-md-5  text-center imagem">
+                    <div class="col-sm-12 col-md-4  text-center imagem border border-dark">
                         <img src="Image/passatempoLogo.PNG">
                     </div>
                 </div>
                 <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
+                <div class="row justify-content-between justify-content-around">
+                    <div class="col-sm-12 col-md-7 texto">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
                     </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
+                    <div class="col-sm-12 col-md-4 text-center imagem">
                         <img src="Image/passatempoLogo.PNG">
                     </div>
                 </div>
                 <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
+                <div class="row justify-content-between justify-content-around">
+                    <div class="col-sm-12 col-md-7 texto">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
                     </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
+                    <div class="col-sm-12 col-md-4 text-center imagem">
                         <img src="Image/passatempoLogo.PNG">
                     </div>
                 </div>
@@ -134,94 +134,19 @@
 
             <!--esventos corporativos info-->
             <div class="tab-pane fade eventos" id="pills-eventos_corporativos" role="tabpanel" aria-labelledby="pills-eventos_corporativos-tab" tabindex="0">
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                <div class="row justify-content-around">
+                    <div class="col-sm-12 col-md-7 texto">
+                        <h1>Titulo</h1>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
+                        </p>
                     </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
+                    <div class="col-sm-12 col-md-4  text-center imagem border border-dark">
                         <img src="Image/passatempoLogo.PNG">
                     </div>
                 </div>
 
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
-
-                <br>
-                <div class="row justify-content-between">
-                    <div class="col-sm-12 col-md-6 texto">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
-                    </div>
-                    <div class="col-sm-12 col-md-5 text-center imagem">
-                        <img src="Image/passatempoLogo.PNG">
-                    </div>
-                </div>
+                
             </div>
           </div>
     </article>
