--- a/adm.html
+++ b/adm.html
@@ -62,7 +62,48 @@
     </nav>
   </header>
     
-    <br> 
+  <br>
+  <br>
+  <br>
+ 
+
+  <article>
+    <div class="container-fluid tudo">
+      <div class="row  justify-content-start ">
+        <div class="col-12 text-center">
+            <img src="Image/Logo Passatempo.png" alt="logo" class="img-fluid" style="max-height: 100px;">
+        </div>
+        <div class="col-12 align-self-center text-center mt-4">
+            <h1 class="titulo_cabecalho">Login</h1>
+        </div>
+    </div>
+        <br>
+        <form>
+            <div class="row justify-content-center">
+                <div class="col">
+                    <!-- <label class="form-label" for="login">Login</label> -->
+                    <input class="form-control" id="login" type="text" placeholder="Senha">
+                </div>
+            </div>
+            <br>
+            <div class="row justify-content-center">
+                <div class="col ">
+                    <label class="form-label" for="senha_login" >Senha</label>
+                    <input class="form-control" id="senha_login" type="password" placeholder="Senha">
+                </div>
+            </div>
+            <br>
+            <div class="row justify-content-center">
+                <div class="col text-center ">
+                    <button type="submit" class="btn btn-primary botao">Login</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</article>
+
+
+    <!-- <br> 
     <article>
         <div class="container-fluid tudo">
             <div class="row justify-content-between">
@@ -94,7 +135,7 @@
                 </div>
             </form>
         </div>
-    </article>
+    </article> -->
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
