arrumando html e css pt4

--- a/saudeBemEstar-2.html
+++ b/saudeBemEstar-2.html
@@ -89,8 +89,8 @@
         </div>
 
         <div class="container-fluid mt-5 container_descricao g-2">
-          <div class="row justify-content-around align-items-cenetr border border-danger">
-              <div class="col-sm-12 col-md-6 text-start">
+          <div class="row justify-content-center align-items-cenetr border border-danger">
+              <div class="col-sm-12 col-md-7 text-start">
                   <h1>Clínica Esportiva</h1>
                   <p id="texto2">
                     Nossas Clínicas Esportivas são projetadas para introduzir crianças ao
@@ -108,11 +108,30 @@
                     Pilates, Funcional Kids e muito mais.
                   </p>
               </div>
-              <div class="col-sm-12 col-md-5  imagem_descricao text-center">
-                <img src="Image/coloque_imagem.PNG" alt="" id="imagem1"><br>
-                <img src="Image/purpurina_laranja.png" alt="" id="imagem2">
-                <img src="Image/coloque_imagem.PNG" alt="" id="imagem3">
-                <img src="Image/purpurina_azul.png" alt="" id="imagem4">              
+              <div class="col-sm-12 col-md-6  imagem_descricao ">
+                <div class="row  ">
+                  <div class="col-sm-3 ">
+                    <img src="Image/purpurina_laranja.png" alt="" id="imagem2">
+                  </div>
+                  <div class="col-sm-7 ">
+                    <img src="Image/coloque_imagem.PNG" alt="" id="imagem1">
+                  </div>
+                </div>
+                <br>
+                <div class="row ">
+                  <div class="col-sm-2  align-self-end">
+                    <img src="Image/purpurina_amarela.png" class="brilho " alt="" id="imagem4">              
+                  </div>
+                  <div class="col-sm-6 ">
+                    <img src="Image/coloque_imagem.PNG" alt="" id="imagem1">
+                  </div>
+                  <div class="col-sm-4 ">
+                    <img src="Image/purpurina_azul.png" alt=""  class="brilho" id="imagem4">              
+                  </div>
+
+                </div>
+
+                </div>
               </div>
           </div>
       </div>
