--- a/adm.html
+++ b/adm.html
@@ -82,13 +82,13 @@
             <div class="row justify-content-center">
                 <div class="col">
                     <!-- <label class="form-label" for="login">Login</label> -->
-                    <input class="form-control" id="login" type="text" placeholder="Senha">
+                    <input class="form-control" id="login" type="text" placeholder="Login">
                 </div>
             </div>
             <br>
             <div class="row justify-content-center">
                 <div class="col ">
-                    <label class="form-label" for="senha_login" >Senha</label>
+                    <!-- <label class="form-label" for="senha_login" >Senha</label> -->
                     <input class="form-control" id="senha_login" type="password" placeholder="Senha">
                 </div>
             </div>
