ajuste em eventos

--- a/eventos.html
+++ b/eventos.html
@@ -82,20 +82,21 @@
     <br>
 
     <article>
-        <ul class="nav nav-pills mb-3 border border-danger " id="pills-tab" role="tablist">
-
-            <!-- tab social -->
-            <li class="nav-item" role="presentation">
-                <!-- botao eventos sociais -->
-              <button class="nav-link active" id="pills-eventos_sociais-tab" data-bs-toggle="pill" data-bs-target="#pills-eventos_sociais" type="button" role="tab" aria-controls="pills-eventos_sociais" aria-selected="true">Eventos Sociais</button>
-            </li>
-
-            <!-- tab corp -->
-            <li class="nav-item" role="presentation">
-                <!-- botao eventos corporativos -->
-              <button class="nav-link" id="pills-eventos_corporativos-tab" data-bs-toggle="pill" data-bs-target="#pills-eventos_corporativos" type="button" role="tab" aria-controls="pills-eventos_corporativos" aria-selected="false">Eventos Corporativos</button>
-            </li>
-          </ul>
+        <div class="text-center align-items-center justify-content-center">
+            <ul class="nav nav-pills mb-3 border border-danger tester " id="pills-tab" role="tablist">
+                <!-- tab social -->
+                <li class="nav-item" role="presentation">
+                    <!-- botao eventos sociais -->
+                  <button class="nav-link active" id="pills-eventos_sociais-tab" data-bs-toggle="pill" data-bs-target="#pills-eventos_sociais" type="button" role="tab" aria-controls="pills-eventos_sociais" aria-selected="true">Eventos Sociais</button>
+                </li>
+    
+                <!-- tab corp -->
+                <li class="nav-item" role="presentation">
+                    <!-- botao eventos corporativos -->
+                  <button class="nav-link ms-5" id="pills-eventos_corporativos-tab" data-bs-toggle="pill" data-bs-target="#pills-eventos_corporativos" type="button" role="tab" aria-controls="pills-eventos_corporativos" aria-selected="false">Eventos Corporativos</button>
+                </li>
+            </ul> 
+        </div>
 
           <br>
 
@@ -136,7 +137,7 @@
             <div class="tab-pane fade eventos" id="pills-eventos_corporativos" role="tabpanel" aria-labelledby="pills-eventos_corporativos-tab" tabindex="0">
                 <div class="row justify-content-around">
                     <div class="col-sm-12 col-md-7 texto">
-                        <h1>Titulo</h1>
+                        <h1 class="texto01">Titulo</h1>
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, distinctio pariatur! Possimus debitis eaque fuga at, vero non magnam culpa ducimus neque ipsam iste maiores eius dolores nulla vel labore.
                         </p>
