--- a/prototipos/front/modal.html
+++ b/prototipos/front/modal.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary btn-lg" data-bs-dismiss="modal" aria-label="close" onclick="dropImagens()">Fechar</button>
-                    <button class="btn btn-primary btn-lg" onclick="selecionarImagem()">Selecionar</button>
+                    <button class="btn btn-primary btn-lg" data-bs-dismiss="modal" onclick="selecionarImagem()">Selecionar</button>
                 </div>
             </div>
         </div>
