--- a/menu-2.html
+++ b/menu-2.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-md fixed ">
+        <nav class="navbar navbar-expand-lg fixed ">
           <div class="container-fluid  ">
             <div>
               <img src="Image/Logo Passatempo.png" class="home_logo ">
