arrumando html e css pt5

--- a/contato.html
+++ b/contato.html
@@ -131,7 +131,9 @@
                 <h2>Entre em Contato</h2>
                 <p class="form">Quer saber mais? Preencha o formulário para que possamos entrar em contato</p>
             </div>
-                <form>
+                <form >
+                    <div>
+                    <!-- form= row resto   col-12-->
                     <div class="row">
                         <label for="name" class="form-label ">Nome</label>
                         <input type="text" class="form-control col" id="name" placeholder="Primeiro Nome">
