--- a/eventos.html
+++ b/eventos.html
@@ -82,7 +82,7 @@
     <br>
 
     <article>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mx-4">
             <ul class="nav nav-pills mb-3 border border-danger tester " id="pills-tab" role="tablist">
                 <!-- tab social -->
                 <li class="nav-item" role="presentation">
