--- a/oficinas-2.html
+++ b/oficinas-2.html
@@ -87,7 +87,7 @@
     </div> -->
 
     <div class="container-fluid">
-        <div class="row  justify-content-start ">
+        <div class="row  justify-content-start">
             <div class="col-12 text-center">
                 <img src="Image/Logo Passatempo.png" alt="logo" class="img-fluid" style="max-height: 100px;">
             </div>
@@ -96,20 +96,27 @@
             </div>
         </div>
     </div>
-   
+
+    <br>
+    <br>
 
     <!-- DESCRIÇÃO -->
 
-    <div class="container-fluid mt-5 container_descricao g-2">
-        <div class="row justify-content-center align-items-center ">
-            <div class="col-sm-12 col-md-5 text-start">
+    <div class="container-fluid container_descricao border border-danger">
+        <div class="row justify-content-center align-items-center border border-dark mx-4">
+            <div class="col-sm-12 col-md-5 text-start border border-primary">
                 <p id="0" class="texto_descricao ">
                     Com uma variedade de materiais coloridos e ferramentas divertidas, nossas oficinas proporcionam um ambiente estimulante e acolhedor para que as crianças possam se expressar livremente. Valorizamos a diversidade de ideias e incentivamos a experimentação, sempre celebrando a singularidade de cada pequeno artista. Aqui, o aprendizado acontece de forma lúdica e significativa, promovendo o desenvolvimento criativo e emocional de forma encantadora.
                 </p>
             </div>
-            <div class="col-1"></div>
-            <div class="col-sm-12 col-md-4  imagem_descricao text-center">
-                <img src="https://via.placeholder.com/400x300" alt="imagem descrição" class="img_descricao" id="imagem0">
+            <div class="col-sm-12 col-md-5  imagem_descricao text-center border border-success">
+                <div>
+                    <img src="https://via.placeholder.com/400x300" alt="imagem descrição" class="img_descricao" id="imagem0" style="max-width: 100%; 
+                    max-height: 100%; 
+                    height: auto; 
+                    width: auto;;
+">
+                </div>
             </div>
         </div>
     </div>
