--- a/area_admin.html
+++ b/area_admin.html
@@ -13,32 +13,53 @@
 
     <style>
         .botao_adm{
-            width: 30%;
-            height: 200px;
+            padding: 5%;
         }
-        
+        .area_admin{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+            background-color: bisque;
+            height: 600px;
+
+
+        }
+        .item{
+            background-color: aquamarine;
+            width: 20%;
+            height: 400px;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container-fluid rodape ">
-        <div class="row justify-content-around align-items-center  g-3">
-            <!-- container com o botao de contate -->
-            <div class="col-sm-12 col-md-3 btn botao_adm border border-danger" role= "button" aria-pressed="true">
+    <!-- <div class="container-fluid area_admin">
+        <div class="row justify-content-around align-items-center g-3">
+            <div class="col-sm-12 col-md-3 btn botao_adm border border-danger justify-self-center" role= "button" aria-pressed="true">
                 <a href="contato.html" class="contate-nos">
-                    Contate-nos
+                    Tutorial
                 </a>
             </div>
             <div class="col-sm-12 col-md-3 btn botao_adm border border-danger" role= "button" aria-pressed="true">
                 <a href="contato.html" class="contate-nos border border-primary">
-                    Contate-nos
+                    Consultar Dados
                 </a>
             </div>
             <div class="col-sm-12 col-md-3 btn botao_adm border border-danger" role= "button" aria-pressed="true">
                 <a href="contato.html" class="contate-nos">
-                    Contate-nos
+                    Alterar Imagem
                 </a>
             </div>     
         </div>
+    </div> -->
+
+
+    <div class="container-fluid area_admin">
+        <!-- container com o botao de contate -->
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
     </div>
 
                 
