ajustando o código pt sla

--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <footer>
+    <footer class="fixed-bottom">
         <div class="container-fluid rodape">
             <div class="row justify-content-around align-items-center  g-3">
                 <!-- col botao contato -->
