--- a/teste.html
+++ b/teste.html
@@ -31,7 +31,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-around flex-grow-1">
                 <li class="nav-item text-top ">
-                    <a class="nav-link " aria-current="page" href="menu-2.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="menu-2.html">Home</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="oficinas-2.html">Oficinas</a>
@@ -58,8 +58,6 @@
                         </svg>                    </button>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><button class="dropdown-item" type="button">Action</button></li>
-                        <li><button class="dropdown-item" type="button">Another action</button></li>
-                        <li><button class="dropdown-item" type="button">Something else here</button></li>
                     </ul>
                 </li>
 
