--- a/telas_ofc/menu-2.html
+++ b/telas_ofc/menu-2.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="CSS/teste_menu.css">
-    <link rel="stylesheet" href="CSS/teste_navbar.css">
-    <link rel="stylesheet" href="CSS/style_footer.css">
+    <link rel="stylesheet" href="styles/menu-2.css">
+    <link rel="stylesheet" href="styles/navbar-2.css">
+    <link rel="stylesheet" href="styles/footer.css">
 
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
