--- a/telas_ofc/oficinas-2.html
+++ b/telas_ofc/oficinas-2.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficinas</title>
-    <link rel="stylesheet" href="CSS/teste_oficina.css">
-    <link rel="stylesheet" href="CSS/teste_navbar.css">
-    <link rel="stylesheet" href="CSS/style_footer.css">
+    <link rel="stylesheet" href="styles/oficinas-2.css">
+    <link rel="stylesheet" href="styles/navbar-2.css">
+    <link rel="stylesheet" href="styles/footer.css">
+
 
 
 
