--- a/testes/teste_cards.html
+++ b/testes/teste_cards.html
@@ -36,7 +36,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md fixed">
+    <nav class="navbar navbar-expand-md fixed border borde">
       <div class="container-fluid">
         <div>
           <img src="img/Logo Passatempo.png" class="passatempo_logo" alt="Logo Passatempo">
