--- a/telas_ofc/footer.html
+++ b/telas_ofc/footer.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 </head>
 <body>
-    <footer class="fixed-bottom">
+    <footer class="fixed">
         <div class="container-fluid rodape">
             <div class="row justify-content-around align-items-center  g-3">
                 <!-- col botao contato -->
