--- a/telas_ofc/teste-2-carrossel.html
+++ b/telas_ofc/teste-2-carrossel.html
@@ -32,22 +32,17 @@
 <body >
 
     <div class="carousel slide" id="carouselDemo" data-bs-wrap="true" data-bs-ride="carousel">
-
         <div class="carousel-inner">
-
             <div class="carousel-item active">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="w-100" alt="img1">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="w-80" alt="img1">
             </div>
             <div class="carousel-item">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="w-100" alt="img2">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="w-80" alt="img2">
             </div>
             <div class="carousel-item">
-                <img src="https://via.placeholder.com/400x300" class="w-100" alt="img3">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="w-80" alt="img3">
             </div>
-
         </div>
-
-
 
         <button class="carousel-control-prev" 
                                 type="button" 
@@ -67,14 +62,12 @@
             <button type="button" class="active" data-bs-target="#carouselDemo" data-bs-slide-to="0">
                 <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp">
             </button>
-            <button type="button" class="active" data-bs-target="#carouselDemo" data-bs-slide-to="1">
+            <button type="button" class="" data-bs-target="#carouselDemo" data-bs-slide-to="1">
                 <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp">
             </button>
-            <button type="button" class="active" data-bs-target="#carouselDemo" data-bs-slide-to="2">
-                <img src="https://via.placeholder.com/400x300">
+            <button type="button" class="" data-bs-target="#carouselDemo" data-bs-slide-to="2">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp">
             </button>
-
-
         </div>
     </div>
 
