coloquei o estilo dos cookies

--- a/recursos/Pop-up Cookies.html
+++ b/recursos/Pop-up Cookies.html
@@ -4,39 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consentimento de Cookies</title>
-    <style>
-        /* Estilo para o pop-up */
-        .cookie-popup {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: #3E4096;
-            color: #fff;
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 1000;
-        }
-        .cookie-popup p {
-            margin: 0;
-            flex: 1;
-        }
-        .cookie-popup button {
-            background-color: #6787E7;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            margin-left: 10px;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        .cookie-popup button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="pop-up.css">
+    
 </head>
 <body>
     <div id="cookiePopup" class="cookie-popup">
